Frontend: Tab component markup

--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -327,6 +327,29 @@ button.btn--accent2
 </div>
 
 
+<div class="card-lg">
+  <div class="image">
+    <img src="https://images.unsplash.com/photo-1587033411391-5d9e51cce126?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80" alt="">
+    <div class="tags">
+      <span class="tag tag--active">tag1</span>
+      <span class="tag">tag2</span>
+      <span class="tag">tag3</span>
+    </div>
+  </div>
+  <div class="info-panel">
+    <div class="left">
+      <div class="header">Very_Long_Title_Very_Long_Title_Very_Long_Title_Very_Long_Title_Very_Long_Title_Very_Long_Title</div>
+      <div class="description">
+        <span class="label label--failed">Invalid</span> Lorem_ipsum_dolor_sit_amet,_consectetur_adipisicing_elit._Amet_architecto_assumenda_at_consectetur_consequatur_deserunt_dicta_dolor_doloribus_earum_illo_impedit_ipsum_labore,_laborum_necessitatibus_obcaecati_rem_repellat_reprehenderit_saepe!
+      </div>
+    </div>
+    <div class="right">
+      <button class="card-button">Approve</button>
+    </div>
+  </div>
+</div>
+
+
 
 <h1>Info Table</h1>
 
