--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -966,6 +966,76 @@ button, input {
   border-top: 1px solid #F5F5F5;
 }
 
+.scenario-history {
+  margin-top: 32px;
+}
+.scenario-history-title {
+  font-weight: 500;
+  font-size: 36px;
+  color: #5F5F5F;
+  font-family: var(--font-header);
+  margin-bottom: 50px;
+  text-align: right;
+}
+.scenario-history-actions {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  margin-bottom: 20px;
+}
+.scenario-history-record {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 64px;
+  border-bottom: 1px solid #EEEEEE;
+  position: relative;
+  z-index: 1;
+}
+.scenario-history-record:not(.scenario-history-record--unclickable) {
+  cursor: pointer;
+}
+.scenario-history-record:before {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  left: -16px;
+  right: -16px;
+  bottom: 0;
+  z-index: -1;
+  border-radius: 4px;
+  background-color: transparent;
+  transition: background-color .1s ease-in-out;
+}
+.scenario-history-record:not(.scenario-history-record--unclickable):hover:before {
+  content: ' ';
+  background-color: #eeeeee;
+}
+.record-icon {
+  margin-right: 10px;
+  min-width: 20px;
+  font-size: 20px;
+}
+.record-icon .Passed {
+  color: var(--color-green);
+}
+.record-icon .Failed {
+  color: var(--color-red);
+}
+.record-state {
+  flex: 1;
+}
+.record-state .record-date {
+  color: #565656;
+  font-size: 16px;
+  font-weight: 400;
+}
+.record-state .record-status {
+  color: #D2D2D2;
+  font-size: 12px;
+  font-weight: 400;
+}
+
 .status-cell {
   display: flex;
   align-items: center;
