Make UI more responsive

--- a/frontend/src/app/ui-kit/card-md/card-md.component.html
+++ b/frontend/src/app/ui-kit/card-md/card-md.component.html
@@ -7,7 +7,7 @@
         'image--never-run-before': state === ''
        }"
   >
-    <img (click)="clickCard.emit(itemId)" [src]="imageUrl" [attr.alt]="header">
+    <img (click)="clickCard.emit(itemId)" [src]="imageUrl" alt="">
 
     <app-icon
       *ngIf="isFavorite"
