--- a/frontend/src/app/view/job-page/job-page.component.html
+++ b/frontend/src/app/view/job-page/job-page.component.html
@@ -103,7 +103,7 @@
 
   <div class="data-placeholder">
 
-    <div class="app-card m6 xs12" *ngFor="let c of cases$ | async; index as idx">
+    <div class="app-card app-card--two-in-row xs12" *ngFor="let c of cases$ | async; index as idx">
 
       <app-card-lg
         [label]="c.label"
