--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -6,9 +6,9 @@
 nav {
   position: relative;
   color: #6A6A6A;
-  font-size: 20px;
+  font-size: 1.042vw; /* 20px */
   font-weight: 400;
-  line-height: 67px;
+  line-height: 3.490vw; /* 67px */
   height: var(--navbar-size);
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0,0,0,0.12);
 }
@@ -19,9 +19,9 @@ nav {
 
 }
 .logo > img {
-  width: 207px;
-  margin-left: 40px;
-  margin-right: 80px;
+  width: 10.781vw; /* 207px */
+  margin-left: 2.083vw; /* 40px */
+  margin-right: 4.167vw; /* 80px */
 }
 
 @media (max-width: 600px) {
@@ -30,12 +30,12 @@ nav {
   }
   nav .app-hamburger {
     display: block;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 1.042vw; /* 20px */
+    padding-left: 1.042vw; /* 20px */
   }
   nav .logo > img {
     width: 60%;
-    margin-left: 20px;
+    margin-left: 1.042vw; /* 20px */
   }
 
 }
@@ -62,7 +62,7 @@ li:active {
   border-bottom: 3px solid #F3B618;
 }
 li + li {
-  margin-left: 75px;
+  margin-left: 3.646vw; /* 70px //75px; */
 }
 
 .app-account .icon {
