--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -52,7 +52,7 @@
 
   <div class="data-placeholder">
 
-    <div class="app-card xs12 m4 l3" *ngFor="let scenario of scenarios$ | async">
+    <div class="app-card app-card--three-in-row xs12" *ngFor="let scenario of scenarios$ | async">
 
       <app-card-md
         [itemId]="scenario._id"
