--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -41,6 +41,16 @@
   --font-analytical: 'Oswald', sans-serif;
   --font-normal1: 'Jost', sans-serif;
   --font-normal2: 'Ubuntu', sans-serif;
+
+  --px16: 0.833vw; 
+  --px18: 0.938vw;
+}
+
+@media (max-width: 600px) {
+  :root {
+    --px16: 16px;
+    --px18: 18px;
+  }
 }
 
 .color-blue {
@@ -104,11 +114,11 @@ button, input {
 /* BUTTONS */
 
 .button {
-  border-radius: 50px;
+  border-radius: 2.604vw; /* 50px */
   border: none;
-  min-height: 40px;
+  min-height: 2.083vw; /* 40px */
   padding: 0 1.5em 0 1.5em;
-  font-size: 100%;
+  font-size: var(--px16); /* 100% == 16px */
   font-family: var(--font-normal);
   font-weight: 400;
   color: #ffffff;
@@ -139,7 +149,7 @@ button, input {
 .button--dark    { background: #000000; border: 1px solid #000000; }
 .button--white   { background: #ffffff; border: 1px solid #545454; color: #000000; }
 .button--lg {
-  font-size: 18px;
+  font-size: var(--px18); /* 18px */
   font-weight: 500;
 }
 
@@ -148,7 +158,7 @@ button, input {
   border: none;
   background: transparent;
   color: var(--color-page-data-actions);
-  font-size: 16px;
+  font-size: var(--px16); /* 16px */
   font-weight: 500;
   white-space: nowrap;
   cursor: pointer;
@@ -156,10 +166,14 @@ button, input {
   padding: 0;
   display: inline-flex;
   align-items: center;
-  height: 24px;
+  height: 1.250vw; /* 24px; */
+  outline: none;
+}
+.data-action:hover {
+  color: var(--color-blue);
 }
 .data-action + .data-action {
-  margin-left: 20px;
+  margin-left: 1.042vw; /* 20px */
 }
 .data-action i {
   margin-right: .25em;
@@ -175,7 +189,7 @@ button, input {
   border-bottom: 1px solid var(--color-page-data-actions-alt);
   outline: none;
   color: var(--color-page-data-actions);
-  font-size: 16px;
+  font-size: var(--px16); /* 16px */
   font-weight: 500;
 }
 .data-action .search-field input::placeholder {
@@ -196,12 +210,12 @@ button, input {
 }
 .column-header h2 {
   font-weight: 500;
-  font-size: 24px;
+  font-size: 1.250vw; /* 24px */
   font-family: var(--font-header);
 }
 .column-header span .action {
   text-decoration: none;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px */
   font-weight: 500;
   color: #CDCDCD;
   cursor: pointer;
@@ -215,13 +229,13 @@ button, input {
 
 .page-header {
   font-family: var(--font-header);
-  font-size: 36px;
+  font-size: 1.875vw; /* 36px */
   font-weight: 500;
   color: var(--color-page-headers);
 }
 .page-description {
   font-family: var(--font-normal);
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   font-weight: 500;
   color: #000000;
 }
@@ -233,7 +247,7 @@ button, input {
   padding-bottom: 23px;
 }
 .sidebar-header > h2 {
-  font-size: 72px;
+  font-size: 3.750vw; /* 72px; */
   font-weight: bold;
   line-height: 60%;
   margin: 70px 0 27px 0;
@@ -241,25 +255,25 @@ button, input {
   font-family: var(--font-header);
 }
 .sidebar-header > h2 small {
-  font-size: 36px;
+  font-size: 1.875vw; /* 36px */
   font-weight: 500;
 }
 .sidebar-header span {
-  font-size: 24px;
+  font-size: 1.250vw; /* 24px; */
   font-weight: 500;
 }
 .sidebar-header span + span {
-  margin-left: 32px;
+  margin-left: 1.667vw; /* 32px */
 }
 
 .filter-header {
-  font-size: 24px;
+  font-size: 1.250vw; /* 24px; */
   font-weight: 500;
   font-family: var(--font-header);
   color: var(--color-page-headers);
 }
 .filter-subheader {
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   font-weight: 500;
   font-family: var(--font-header);
   color: #3A3A3A;
@@ -272,7 +286,7 @@ button, input {
 .breadcrumb-item {
   color: #5F5F5F;
   font-weight: 400;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
 }
 .breadcrumb-item + .breadcrumb-item {
   margin-left: 10px;
@@ -319,7 +333,7 @@ button, input {
 }
 .text-field label {
   font-weight: 500;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   color: #1F1F1F;
 }
 .text-field label > i {
@@ -336,7 +350,7 @@ button, input {
   margin-block-start: 6px;
   margin-block-end: 6px;
   letter-spacing: .5px;
-  font-size: 13px;
+  font-size: 0.677vw; /* 13px */
   color: #909090;
   line-height: 150%;
 }
@@ -356,7 +370,7 @@ button, input {
   background: transparent;
   color: #535353;
   font-family: var(--font-normal);
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   padding-left: 11px;
   padding-right: 11px;
   width: 100%;
@@ -386,7 +400,7 @@ button, input {
   padding-left: 16px;
   padding-right: 12px;
   font-family: var(--font-normal);
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   font-weight: 400;
   margin: 2px;
   white-space: nowrap;
@@ -406,7 +420,7 @@ button, input {
   padding-left: 20px;
   padding-right: 20px;
   font-family: var(--font-normal);
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   font-weight: 400;
   margin: 2px;
   cursor: pointer;
@@ -415,7 +429,7 @@ button, input {
 }
 .text-field .input-box .input-box-icon {
   color: #89CB8C;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   margin-right: 8px;
   cursor: pointer;
 }
@@ -426,7 +440,7 @@ button, input {
 .text-field .error-message {
   margin-block-start: 5px;
   margin-block-end: 0;
-  font-size: 12px;
+  font-size: 0.625vw; /* 14px; */
   font-weight: 500;
   letter-spacing: .5px;
   color: var(--color-red);
@@ -434,7 +448,7 @@ button, input {
 }
 
 .checkbox-field {
-  margin-bottom: 12px;
+  margin-bottom: 0.625vw; /* 12px */
   display: flex;
   align-items: center;
 }
@@ -442,9 +456,9 @@ button, input {
   font-family: var(--font-normal);
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   line-height: 200%;
-  margin-left: 12px;
+  margin-left: 0.625vw; /* 12px */
 }
 .checkbox-field input[type=checkbox] {
   height: 0;
@@ -454,8 +468,8 @@ button, input {
 .checkbox-field label {
   cursor: pointer;
   text-indent: -9999px;
-  width: 50px;
-  height: 26px;
+  width: 2.604vw; /* 50px */
+  height: 1.354vw; /* 26px */
   background: #E2E2E2;
   display: block;
   border-radius: 6px;
@@ -464,10 +478,10 @@ button, input {
 .checkbox-field label:after {
   content: '';
   position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 22px;
-  height: 22px;
+  top: 0.104vw; /* 2px */
+  left: 0.104vw; /* 2px */
+  width: 1.146vw; /* 22px */
+  height: 1.146vw; /* 22px */
   background: #fff;
   border-radius: 4px;
   transition: .3s;
@@ -477,18 +491,18 @@ button, input {
   _background: var(--color-green);
 }
 .checkbox-field input[type=checkbox]:checked + label:after {
-  left: calc(100% - 2px);
+  left: calc(100% - 0.104vw); /* 100% - 2px */
   transform: translateX(-100%);
 }
 .checkbox-field label:active:after {
-  width: 30px;
+  width: 1.563vw; /* 30px */
 }
 
 /* CHECKBOXES */
 /* ???
 .checkbox, .switch, .toggle {
   font-family: var(--font-normal);
-  font-size: 16px;
+  font-size: var(--px16); // 16px;
   font-weight: 500;
   margin-bottom: 16px;
   position: relative;
@@ -555,12 +569,12 @@ button, input {
 .tabs-content .tabs-content-title,
 .tabs-list .tab-title {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 1.250vw; /* 24px; */
   font-family: var(--font-header);
   line-height: 135%;
 }
 .tabs-list .tab-description {
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   color: #B1B1B1;
   font-weight: 400;
 }
@@ -584,7 +598,7 @@ button, input {
 .card-sm {
   display: flex;
   _width: 435px;
-  height: 165px;
+  height: 8.594vw; /* 165px; */
   padding: 8px;
   background: #FDFDFD;
   margin-bottom: 8px;
@@ -621,7 +635,7 @@ button, input {
   flex: 1;
 }
 .card-sm .info-panel .info .header {
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   margin-bottom: 10px;
   font-weight: 500;
   margin-top: 2px;
@@ -629,7 +643,7 @@ button, input {
   font-family: var(--font-header);
 }
 .card-sm .info-panel .info .label {
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   color: #ffffff;
   padding: 1px 6px;
   margin-bottom: 12px;
@@ -644,7 +658,7 @@ button, input {
   border-left: 4px solid var(--color-red-dark);
 }
 .card-sm .info-panel .info .description {
-  font-size: 12px;
+  font-size: 0.625vw; /* 14px; */
   color: #565656;
   line-height: 135%;
 }
@@ -673,17 +687,20 @@ button, input {
   line-height: 150%;
 }
 .card-sm .info-panel .actions {
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   white-space: nowrap;
   cursor: pointer;
 }
 .card-sm .info-panel .actions > * + * { margin-left: 1em; white-space: nowrap; }
-.card-sm .info-panel .actions i { font-size: 10px; margin-left: 0.25em;}
+.card-sm .info-panel .actions i { 
+  font-size: 0.521vw; /* 10px */ 
+  margin-left: 0.25em;
+}
 
 
 
 .card-md {
-  width: 380px;
+  width: 19.792vw; /* 380px; */
   max-width: 100%;
   margin-bottom: 50px;
   display: flex;
@@ -786,7 +803,7 @@ button, input {
   justify-content: space-between;
 }
 .card-md .header .left {
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   color: #1F1F1F;
   cursor: pointer;
   font-family: var(--font-header);
@@ -794,7 +811,7 @@ button, input {
 .card-md .header .left i {
   margin-left: .5em;
   cursor: pointer;
-  font-size: 12px;
+  font-size: 0.625vw; /* 14px; */
   opacity: .75;
 }
 .card-md .header .left i.icon--running {
@@ -806,7 +823,7 @@ button, input {
 }
 .card-md .header .right {
   color: var(--color-green);
-  font-size: 11px;
+  font-size: 0.573vw; /* 11px */
   letter-spacing: 2px;
 }
 .card-md .header .right .failed {
@@ -814,12 +831,12 @@ button, input {
 }
 
 .card-lg {
-  width: 608px;
+  width: 31.667vw; /* 608px */
   max-width: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 2.604vw; /* 50px */
 }
 @media (max-width:600px) {
   .card-lg {
@@ -839,7 +856,7 @@ button, input {
   flex: 1;
   position: relative;
   background: #E6EAEE;
-  height: 374px;
+  height: 19.792vw; /* 380px */
   max-height: 50vh;
 }
 .card-lg .image img {
@@ -866,7 +883,7 @@ button, input {
 .card-lg .tags .tag {
   background: #F4F4F4;
   border-radius: 4px;
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   font-weight: 400;
   color: #838383;
   padding: 2px 8px;
@@ -889,7 +906,7 @@ button, input {
   max-width: 82%;
 }
 .card-lg .info-panel .left .header {
-  font-size: 18px;
+  font-size: var(--px18); /* 18px; */
   font-weight: 500;
   margin-bottom: 4px;
   cursor: pointer;
@@ -897,12 +914,12 @@ button, input {
 }
 .card-lg .info-panel .left .description {
   color: #1F1F1F;
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   font-weight: 400;
   line-break: anywhere;
 }
 .card-lg .info-panel .left .label {
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   color: #ffffff;
   padding: 1px 6px;
   width: fit-content;
@@ -930,7 +947,9 @@ button, input {
 
 /* TABLES */
 
-.info-table { font-size: 16px }
+.info-table { 
+  font-size: var(--px16); /* 16px */
+}
 .info-table .label-cell {
   font-weight: bold;
   padding-right: 20px;
@@ -938,7 +957,7 @@ button, input {
 .info-table .value-cell { font-weight: 400;}
 .info-table .value-cell .chips {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   color: #838383;
   background: #F4F4F4;
   border-radius: 4px;
@@ -954,9 +973,10 @@ button, input {
 .runs-table {
   width: 100%;
   border-collapse: collapse;
+  font-size: var(--px16); /* 16px */
 }
 .runs-table tr {
-  height: 70px;
+  height: 3.646vw; /* 70px; */
   cursor: pointer;
 }
 .runs-table tr:hover {
@@ -967,27 +987,27 @@ button, input {
 }
 
 .scenario-history {
-  margin-top: 32px;
+  margin-top: 1.667vw; /* 32px */
 }
 .scenario-history-title {
   font-weight: 500;
-  font-size: 36px;
+  font-size: 1.875vw; /* 36px */
   color: #5F5F5F;
   font-family: var(--font-header);
-  margin-bottom: 50px;
+  margin-bottom: 2.604vw; /* 50px */
   text-align: right;
 }
 .scenario-history-actions {
   display: flex;
   justify-content: space-between;
   flex-direction: row-reverse;
-  margin-bottom: 20px;
+  margin-bottom: 1.042vw; /* 20px */
 }
 .scenario-history-record {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 64px;
+  height: 3.333vw; /* 64px */
   border-bottom: 1px solid #EEEEEE;
   position: relative;
   z-index: 1;
@@ -999,8 +1019,8 @@ button, input {
   content: ' ';
   position: absolute;
   top: 0;
-  left: -16px;
-  right: -16px;
+  left: -var(--px16); /* -16px */
+  right: -var(--px16); /* -16px */
   bottom: 0;
   z-index: -1;
   border-radius: 4px;
@@ -1012,9 +1032,9 @@ button, input {
   background-color: #eeeeee;
 }
 .record-icon {
-  margin-right: 10px;
-  min-width: 20px;
-  font-size: 20px;
+  margin-right: 0.521vw; /* 10px */
+  min-width: 1.042vw; /* 20px */
+  font-size: 1.042vw; /* 20px */
 }
 .record-icon .Passed {
   color: var(--color-green);
@@ -1027,12 +1047,12 @@ button, input {
 }
 .record-state .record-date {
   color: #565656;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   font-weight: 400;
 }
 .record-state .record-status {
   color: #D2D2D2;
-  font-size: 12px;
+  font-size: 0.625vw; /* 14px; */
   font-weight: 400;
 }
 
@@ -1041,7 +1061,7 @@ button, input {
   align-items: center;
 }
 .status-cell .status-icon {
-  font-size: 24px;
+  font-size: 1.250vw; /* 24px; */
 }
 .status-cell .status-icon--passed {
   color: #89CB8C;
@@ -1057,12 +1077,12 @@ button, input {
 }
 .status-cell .labels .time-label {
   font-weight: 400;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   color: #565656;
   margin-bottom: 4px;
 }
 .status-cell .labels .state-label {
-  font-size: 12px;
+  font-size: 0.625vw; /* 14px; */
   font-weight: 400;
   color: #D2D2D2;
 }
@@ -1072,27 +1092,27 @@ button, input {
   align-items: center;
 }
 .user-cell .upic {
-  width: 30px;
-  height: 30px;
+  width: 1.563vw; /* 30px */
+  height: 1.563vw; /* 30px */
   color: #ffffff;
   background: #6087AB;
   border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   text-transform: uppercase;
 }
 .user-cell .text {
   flex: 1;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   font-weight: 400;
   color: #565656;
   margin-left: 12px;
 }
 
 .more-cell .text {
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   font-weight: 400;
 }
 .more-cell .more {
@@ -1108,7 +1128,7 @@ button, input {
   display: none;
 }
 .more-cell .more:hover .hidden-more {
-  font-size: 12px;
+  font-size: 0.625vw; /* 14px; */
 
   display: inline;
   position: absolute;
@@ -1128,17 +1148,17 @@ button, input {
 }
 .action-cell .action-cell-icon {
   cursor: pointer;
-  font-size: 24px;
+  font-size: 1.250vw; /* 24px; */
 }
 
 
 /* WIDGETS */
 
 .widget {
-  width: 200px;
-  height: 200px;
+  width: 10.417vw; /* 200px */
+  height: 10.417vw; /* 200px; */
+  padding: var(--px18); /* 18px */
   border-radius: 16px;
-  padding: 18px;
   box-shadow: 0 10px 20px 0 rgba(0,0,0,.15), 0 5px 5px 0 rgba(0,0,0,.05);
   display: flex;
   flex-direction: column;
@@ -1173,12 +1193,12 @@ button, input {
   color: #000000;
 }
 .widget--double {
-  width: 416px;
+  width: 21.667vw; /* 416px */
   max-width: 100%;
 }
 
 .widget .widget-header {
-  font-size: 18px;
+  font-size: var(--px18); /* 18px */
   font-weight: 400;
 }
 .widget .widget-value {
@@ -1189,24 +1209,24 @@ button, input {
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px */
   font-weight: 400;
   line-height: 150%;
   font-family: var(--font-header);
 }
 .widget .widget-value--lg {
-  font-size: 36px;
+  font-size: 1.875vw; /* 36px */
   font-weight: 400;
   line-height: 100%;
   font-family: var(--font-normal);
 }
 .widget .widget-value--accent {
   padding-top: 30px;
-  font-size: 18px;
+  font-size: var(--px18); /* 18px */
   font-weight: 400;
 }
 .widget .widget-value--accent em {
-  font-size: 64px;
+  font-size: 3.333vw; /* 64px */
   font-style: normal;
   font-family: var(--font-analytical);
 }
@@ -1223,17 +1243,17 @@ button, input {
 
 .fragile-value {
   font-family: var(--font-header);
-  font-size: 16px;
+  font-size: var(--px16); /* 16px */
   text-align: left;
   line-height: 120%;
 }
 .fragile-value--accent {
   color: #000000;
-  font-size: 18px;
+  font-size: var(--px18); /* 18px */
 }
 .fragile-value--accent em {
   font-style: normal;
-  font-size: 48px;
+  font-size: 2.500vw; /* 48px */
   font-family: var(--font-analytical);
 }
 .fragile-preview {
@@ -1260,12 +1280,12 @@ button, input {
 
 .stats-value {
   font-family: var(--font-analytical);
-  font-size: 36px;
+  font-size: 1.875vw; /* 36px */
   margin-top: 9px;
   margin-bottom: 7px;
 }
 .stats-sub {
-  font-size: 12px;
+  font-size: 0.625vw; /* 12px; */
   margin-bottom: 10px;
   letter-spacing: .5px;
 }
@@ -1281,7 +1301,7 @@ button, input {
 
 .stats-chart .bar {
   background: rgba(255,255,255, .17);
-  width: 12px;
+  width: 0.625vw; /* 12px */
   min-height: 3px;
   margin-right: 4px;
 }
@@ -1294,13 +1314,14 @@ button, input {
 }
 
 .widget-run {
-  width: 311px;
-  height: 416px;
+  _width: 19vw;
+  width: 16.198vw;  /* 311px */
+  height: 21.667vw; /* 416px; */
   border-radius: 16px;
-  padding: 26px;
+  padding: 1.354vw; /* 26px */
 }
 .widget-run .run-form {
-  margin-top: 20px;
+  margin-top: 1.042vw; /* 20px */
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -1322,21 +1343,21 @@ button, input {
 
 .viewports-selector-header {
   font-weight: 500;
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   color: #1F1F1F;
 }
 .viewports-selector {
-  margin-top: 10px;
+  margin-top: 0.521vw; /* 10px */
   overflow-wrap: break-word;
 }
 .viewports-selector .viewport-toggle {
-  font-size: 14px;
+  font-size: 0.729vw; /* 14px; */
   font-weight: normal;
   color: #656565;
   background: #FFFFFF;
   border-radius: 4px;
-  line-height: 27px;
-  padding: 0 6px;
+  line-height: 1.406vw; /* 27px */
+  padding: 0 0.313vw; /*0 6px*/
   margin-top: 2px;
   margin-bottom: 2px;
   display: inline-block;
@@ -1344,7 +1365,7 @@ button, input {
   opacity: .3;
   transition: opacity .2s ease-in-out, background-color .2s ease-in-out;
 
-  margin-left: 4px;
+  margin-left: 0.208vw; /* 4px */
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -1363,15 +1384,15 @@ button, input {
 }
 
 .sidebar-placeholder .viewports-selector .viewport-toggle {
-  font-size: 16px;
+  font-size: var(--px16); /* 16px; */
   font-weight: normal;
   background: #E2E2E2;
   color: #3A3A3A;
-  padding: 0 12px;
+  padding: 0 0.625vw; /* 0 12px */
   line-height: 225%;
-  margin-right: 10px;
+  margin-right: 0.521vw; /* 10px; */
   margin-left: 0;
-  margin-bottom: 6px;
+  margin-bottom: 0.313vw; /* 6px */
   opacity: 1;
 }
 .sidebar-placeholder .viewports-selector .viewport-toggle--on {
@@ -1385,13 +1406,14 @@ button, input {
 .widget-label {}
 .widget-label--xl .header {
   margin-bottom: 8px;
-  font-size: 24px;
+  font-size: 1.250vw; /* 24px */
   margin-top: 0;
   font-family: var(--font-header);
+  font-weight: 500;
 }
 .widget-label--xl .header--semibold {
   font-weight: 600;
-  font-size: 22px;
+  font-size: 1.146vw; /* 22px */
 }
 .widget-label .state {
   color: #ffffff;
@@ -1401,7 +1423,7 @@ button, input {
 .widget-label--xl .state {
   font-size: 7.4vh;
   font-weight: bold;
-  margin-bottom: 36px;
+  margin-bottom: 1.875vw; /* 36px */
   border-radius: 8px;
   padding: 8px 1.875vw;
   -webkit-user-select: none;
@@ -1424,7 +1446,7 @@ button, input {
 .widget-label .stats .stats-left,
 .widget-label .stats .stats-right {
   flex: 1;
-  font-size: 18px;
+  font-size: var(--px18); /* 18px */
   font-weight: normal;
 }
 .widget-label .stats .stats-left em,
